--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,12 @@
     padding: 0px;
 }
 
+/* Style for the body */
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Style for the navbar */
 nav { 
   background-color: #ffb429;
   text-align: center;
@@ -31,6 +33,7 @@ a {
   font-size: 1.5rem;
 }
 
+/* Style for the hero image */
 .hero-image {
   height: 65vh;
   width: 100vw;
@@ -46,6 +49,7 @@ a {
   color: yellow;
 }
 
+/* Style for the main element */
 main {
   text-align: center;
   padding-top: 5rem;
@@ -56,6 +60,7 @@ h1 {
   padding-bottom: 5rem;
 }
 
+/* Style for the section */
 section {
   max-width: 50%;
   margin: auto;
@@ -65,10 +70,22 @@ section {
 
 h2 {
   padding-top: 5rem;
+  padding-bottom: 20px;
 }
 
 p {
   font-size: 1.5rem;
+}
+
+/* Style for the Gallery */
+.gallery {
+    display: flex;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 60%;
+    object-fit: cover;
 }
 
 /* Extra small devices (phones, 600px and down) */
