--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ section {
 
 h2 {
   padding-top: 5rem;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 p {
@@ -86,6 +86,12 @@ p {
     width: 100%;
     height: 60%;
     object-fit: cover;
+}
+
+footer { 
+     background-color: #ffb429;
+    text-align: center;
+    padding-bottom: 40px;
 }
 
 /* Extra small devices (phones, 600px and down) */
