--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 /* Style for the body */
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #ffb429;
 }
 
 /* Style for the navbar */
@@ -14,7 +15,6 @@ nav {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 15px;
 }
 
 ul { 
@@ -54,6 +54,16 @@ a {
     text-align: center;
 }
 
+.hero-contact {
+    height: 65vh;
+    width: 100%;
+    background-image: url("../images/luxor.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+
 #hero-text {
   padding-top: 20px;
   color: yellow;
@@ -61,6 +71,11 @@ a {
 
 #about-text {
     padding-top: 20px;
+  }
+
+#contact-text {
+    padding-top: 20px;
+    color: yellow;
   }
 
 /* Style for the main element */
