--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -5,7 +7,7 @@
 
 /* Style for the body */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Arvo', serif;
   background-color: #ffb429;
 }
 
