--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ a {
   font-size: 1.5rem;
 }
 
-a:hover { 
+a:hover{  
   text-decoration: underline;
 }
 
@@ -71,7 +71,7 @@ a:hover {
 }
 
 #hero-text {
-  padding-top: 20px;
+  padding-top: 300px;
   color: yellow;
 }
 
@@ -122,13 +122,16 @@ h2 {
 }
 
 .gallery__img {
-    width: 100%;
+    width: 70%;
     height: 60%;
     object-fit: cover;
 }
 
 .gallery-text {
     padding: 20px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 form {
@@ -164,8 +167,8 @@ form {
 footer { 
     background-color: #ffb429;
     text-align: center;
-    padding-top: 60px;
     padding-bottom: 50px;
+    font-size: small;
 }
   
   /* Medium devices (landscape tablets, 768px and up) */
