--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,10 +148,10 @@ h2 {
   margin: auto;
 }
 
-/* .input { 
+.input { 
   padding: 10px;
   border-radius: 20px;
-} */
+}
 
  .myButton {
 	box-shadow:inset 0px 1px 3px 0px #91b8b3;
