Add padding top to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,7 @@ footer {
     text-align: center;
     padding-bottom: 50px;
     font-size: small;
+    padding-top: 80px;
 }
   
   /* Medium devices (landscape tablets, 768px and up) */
